--- a/src/pages/assets/layout.less
+++ b/src/pages/assets/layout.less
@@ -3,21 +3,23 @@
   --bs-card-spacer-y: 1.5rem;
   --bs-card-title-spacer-y: 0;
   --bs-card-border-color: var(--color-gray-400);
-  --bs-card-border-radius: .75rem;
+  --bs-card-border-radius: 0.75rem;
 
   font-weight: 600;
 
-  :global(.card-title) {
-    font-size: 1.25rem;
-    font-weight: 600;
-    line-height: 1.6;
+  :global {
+    .card-title {
+      font-size: 1.25rem;
+      font-weight: 600;
+      line-height: 1.6;
+    }
   }
 }
 
 .accordion {
   --bs-accordion-color: var(--color-gray-600);
   --bs-accordion-btn-color: var(--text-main);
-  --bs-accordion-border-color: #D0D5DD;
+  --bs-accordion-border-color: #d0d5dd;
   --bs-accordion-border-radius: 0.5rem;
   --bs-accordion-inner-border-radius: 0.5rem;
   --bs-accordion-btn-padding-x: 0;
@@ -39,12 +41,13 @@
       }
 
       &:not(:first-of-type) {
-        border-top: var(--bs-accordion-border-width) solid var(--bs-accordion-border-color);
+        border-top: var(--bs-accordion-border-width) solid
+          var(--bs-accordion-border-color);
       }
     }
 
     .accordion-header {
-      margin-bottom: .25rem;
+      margin-bottom: 0.25rem;
     }
 
     .accordion-button {
