--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -1,19 +1,19 @@
-@green: #4BB227;
-@white: #FFFFFF;
-@primary: #6A55EA;
-@success: #027A48;
+@green: #4bb227;
+@white: #ffffff;
+@primary: #6a55ea;
+@success: #027a48;
 @secondary: @green;
-@gray-100: #F2F4F7;
-@gray-200: #EAECF0;
-@gray-300: #D0D5DD;
-@gray-400: #98A2B3;
+@gray-100: #f2f4f7;
+@gray-200: #eaecf0;
+@gray-300: #d0d5dd;
+@gray-400: #98a2b3;
 @gray-500: #667085;
 @gray-600: #475467;
 @gray-700: #344054;
 @gray-900: #101828;
-@neutral-4: #6F767E;
+@neutral-4: #6f767e;
 
-@text-main: #1D354F;
+@text-main: #1d354f;
 
 :root {
   --color-primary: @primary;
@@ -30,7 +30,10 @@
   --text-main: @text-main;
   --bs-primary: @primary;
   --bs-success: @success;
+  --bs-success-rgb: 75, 178, 39;
   --bs-body-bg: #f8f9fa;
+  --bs-gutter-x: 1.875rem;
+  --bs-body-color: @text-main;
   --bs-body-font-family: 'Inter', var(--bs-font-sans-serif);
 }
 
@@ -87,13 +90,24 @@
   --bs-btn-disabled-border-color: rgb(@white 0.4);
 }
 
+.btn-dark {
+  --bs-btn-bg: @text-main;
+  --bs-btn-border-color: @text-main;
+  --bs-btn-hover-bg: lighten(@text-main, 5%);
+  --bs-btn-hover-border-color: lighten(@text-main, 5%);
+  --bs-btn-active-bg: lighten(@text-main, 10%);
+  --bs-btn-active-border-color: lighten(@text-main, 10%);
+  --bs-btn-disabled-bg: rgb(@text-main 0.4);
+  --bs-btn-disabled-border-color: rgb(@text-main 0.4);
+}
+
 /** badge **/
 .badge {
   --bs-badge-bg: var(--color-gray-100);
   --bs-badge-color: var(--color-gray-700);
-  --bs-badge-padding-x: .5rem;
-  --bs-badge-padding-y: .125rem;
-  --bs-badge-font-size: .75rem;
+  --bs-badge-padding-x: 0.5rem;
+  --bs-badge-padding-y: 0.125rem;
+  --bs-badge-font-size: 0.75rem;
   --bs-badge-font-weight: 500;
   --bs-badge-line-height: 1.5;
   --bs-badge-border-radius: 1rem;
@@ -103,13 +117,13 @@
 }
 
 .badge-lg {
-  --bs-badge-padding-x: .625rem;
-  --bs-badge-font-size: .875rem;
+  --bs-badge-padding-x: 0.625rem;
+  --bs-badge-font-size: 0.875rem;
   --bs-badge-line-height: 1.4286;
 }
 
 .badge-success {
-  --bs-badge-bg: #ECFDF3;
+  --bs-badge-bg: #ecfdf3;
   --bs-badge-color: var(--color-success);
 
   .badge-dot {
@@ -120,7 +134,7 @@
     margin-top: -2px;
     margin-right: 4px;
     border-radius: 50%;
-    background: #12B76A;
+    background: #12b76a;
   }
 }
 
