fix: fixed home style

--- a/src/pages/Home/styles.less
+++ b/src/pages/Home/styles.less
@@ -1,6 +1,34 @@
-.container {
-  background-repeat: no-repeat;
-  background-position-x: center;
-  background-position-y: -60px;
-  background-image: url('./imgs/bg.png');
+.hero {
+  --icon-size: 3.5rem;
+  --title-size: 2rem;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .icon {
+    width: var(--icon-size);
+    height: var(--icon-size);
+  }
+
+  .title {
+    margin-bottom: 0;
+    font-size: var(--title-size);
+    font-weight: 700;
+    line-height: 1.25;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    --icon-size: 5.5rem;
+    --title-size: 3rem;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .hero {
+    --icon-size: 7.625rem;
+    --title-size: 4.5rem;
+  }
 }
