--- a/src/pages/Home/styles.less
+++ b/src/pages/Home/styles.less
@@ -19,6 +19,13 @@
   }
 }
 
+.btn {
+  display: block;
+  max-width: 15rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 @media screen and (min-width: 768px) {
   .hero {
     --icon-size: 5.5rem;
